feat(booking): implement full booking creation with seat validation and payment integration