@@ -5,18 +5,24 @@ import java.util.Map;
 import java.util.Set;
 import java.util.stream.Collectors;
 
+import org.hibernate.metamodel.model.domain.internal.SetAttributeImpl;
 import org.springframework.stereotype.Service;
 import org.springframework.web.server.ResponseStatusException;
 
 import com.movie.bookingservice.dtos.requests.BookingRequest;
+import com.movie.bookingservice.dtos.requests.CreatePaymentReq;
 import com.movie.bookingservice.dtos.responses.SeatResponse;
 import com.movie.bookingservice.entities.Booking;
 import com.movie.bookingservice.entities.BookingSeat;
+import com.movie.bookingservice.enums.BookingStatus;
+import com.movie.bookingservice.enums.PaymentMethod;
+import com.movie.bookingservice.enums.PaymentStatus;
 import com.movie.bookingservice.exceptions.CustomException;
 import com.movie.bookingservice.exceptions.ErrorCode;
 import com.movie.bookingservice.repositories.BookingRepository;
 import com.movie.bookingservice.repositories.BookingSeatRepository;
 import com.movie.bookingservice.repositories.httpClients.CinemaClient;
+import com.movie.bookingservice.repositories.httpClients.PaymentClient;
 
 import lombok.RequiredArgsConstructor;
 
@@ -28,20 +34,12 @@ public class BookingService {
         private final BookingSeatRepository bookingSeatRepository;
         private final CinemaClient cinemaClient;
         private final RedisService redisService;
+        private final PaymentClient paymentClient;
 
         public Booking createBooking(BookingRequest request) {
-                Booking booking = Booking.builder()
-                                .userId(request.getUserId())
-                                .showTimeId(request.getShowTimeId())
-                                .totalPrice(0.0)
-                                .paymentStatus("UNPAID")
-                                .bookingStatus("CONFIRMED")
-                                .build();
-
-                Booking saved = bookingRepository.save(booking);
-
-                List<SeatResponse> allSeats = cinemaClient.getSeatsByRoomId(request.getRoomId()).getResult();
-                Map<Long, String> validSeatMap = allSeats.stream()
+                Map<Long, String> validSeatMap = cinemaClient.getSeatsByRoomId(request.getRoomId())
+                                .getResult()
+                                .stream()
                                 .collect(Collectors.toMap(SeatResponse::getId, SeatResponse::getCode));
 
                 List<Long> invalidSeats = request.getSeatIds().stream()
@@ -52,33 +50,60 @@ public class BookingService {
                         throw new CustomException(ErrorCode.SEAT_BOOKING_FAILED);
                 }
                 String redisKey = "showtime:" + request.getShowTimeId() + ":booked-seats";
-                Set<Object> bookedSeats = redisService.getSet(redisKey);
-                Set<Long> bookedSeatIds = bookedSeats.stream()
-                                .map(Object::toString) // safely convert each Object to String
-                                .map(Long::valueOf) // then parse to Long
-                                .collect(Collectors.toSet());
+                Set<Long> bookedSeatIds = redisService.getSeatIds(redisKey);
                 List<Long> alreadyBooked = request.getSeatIds().stream()
                                 .filter(bookedSeatIds::contains)
-                                .collect(Collectors.toList());
-
+                                .toList();
                 if (!alreadyBooked.isEmpty()) {
                         throw new CustomException(ErrorCode.SEAT_BOOKING_FAILED);
                 }
+                Booking booking = Booking.builder()
+                                .userId(request.getUserId())
+                                .showTimeId(request.getShowTimeId())
+                                .totalPrice(request.getTotalPrice())
+                                .paymentStatus(PaymentStatus.UNPAID)
+                                .bookingStatus(BookingStatus.CONFIRMED)
+                                .build();
+
+                Booking savedBooking = bookingRepository.save(booking);
+                CreatePaymentReq createPaymentReq = CreatePaymentReq.builder()
+                                .amount(String.valueOf(request.getTotalPrice()))
+                                .paymentMethod(request.getPaymentMethod()).orderId(String.valueOf(savedBooking.getId()))
+                                .orderInfo(String.valueOf(savedBooking.getId())).build();
+                String urlPayment = paymentClient.createPayment(createPaymentReq).getResult();
+
+                savedBooking.setUrlPayment(urlPayment);
+                Booking updateBooking = bookingRepository.save(savedBooking);
+
+                redisService.addSet("payment:" + String.valueOf(updateBooking.getId()),
+                                request.getSeatIds().toArray(new Long[0]));
 
                 List<BookingSeat> bookingSeats = request.getSeatIds().stream()
                                 .map(seatId -> BookingSeat.builder()
                                                 .seatId(seatId)
                                                 .seatCode(validSeatMap.get(seatId))
-                                                .booking(saved)
+                                                .booking(updateBooking)
                                                 .build())
                                 .toList();
                 bookingSeatRepository.saveAll(bookingSeats);
-                List<String> seatStrings = request.getSeatIds().stream()
-                                .map(String::valueOf)
-                                .toList();
-                redisService.addSet(redisKey, seatStrings.toArray(new String[0]));
-                return saved;
 
+                // List<String> seatStrings = request.getSeatIds().stream()
+                // .map(String::valueOf)
+                // .toList();
+                // redisService.addSet(redisKey, seatStrings.toArray(new String[0]));
+                // redisService.removeHeatSeats(redisKey, request.getSeatIds());
+                return updateBooking;
+
+        }
+
+        public Set<Long> getBookedSeatIds(Long showTimeId) {
+                String redisKey = "showtime:" + showTimeId + ":booked-seats";
+                return redisService.getSeatIds(redisKey);
+        }
+
+        public Set<Long> getHeatSeatIds(Long showTimeId) {
+                String redisKey = "showtime:" + showTimeId + ":heat-seats";
+                return redisService.getSeatIds(redisKey);
         }
 
 }
